# PuTTY-Mac

./: .gitignore  CMakeLists.txt  README.md  cmdline.c  config.c  version.h
cmake/: gitcommit.cmake
macosx/: CMakeLists.txt  Info.plist.in  PuTTY.icns  cocoa-dialog.m  cocoa-eventloop.m  cocoa-gen-glue.c  cocoa-glue.c  cocoa-main.m  cocoa-platform.h  cocoa-puttygen.m  cocoa-terminal.m
ssh/: ssh.c  userauth2-client.c
terminal/: lineedit.c
unix/: CMakeLists.txt
windows/: CMakeLists.txt
